# zephyr_alif

./: Jenkinsfile  MAINTAINERS.yml  west.yml
automation/: Jenkinsfile
drivers/: CMakeLists.txt  Kconfig
soc/alif/ensemble/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml  usb_buf_section.ld
soc/alif/ensemble/common/: Kconfig  alif_ns.ld  alif_ospi.ld  debug_metadata.cmake  linker.ld  mmu_regions.c  mpu_regions.c  pinctrl_soc.h  soc_common.c  soc_common.h  sram.ld
soc/alif/ensemble/e1c/: CMakeLists.txt  Kconfig  Kconfig.defconfig.ae1c1f10405055h0_rtss_he  Kconfig.defconfig.ae1c1f1040505hh0_rtss_he  Kconfig.defconfig.ae1c1f1040505ph0_rtss_he  Kconfig.defconfig.ae1c1f10410105h0_rtss_he  Kconfig.defconfig.ae1c1f1041010hh0_rtss_he  Kconfig.defconfig.ae1c1f1041010ph0_rtss_he  Kconfig.defconfig.ae1c1f40519205h0_rtss_he  Kconfig.defconfig.ae1c1f4051920hh0_rtss_he  Kconfig.defconfig.ae1c1f4051920ph0_rtss_he  Kconfig.soc
soc/alif/ensemble/e3/: Kconfig  Kconfig.defconfig.ae302f40c1537xx_rtss_he  Kconfig.defconfig.ae302f40c1537xx_rtss_hp  Kconfig.defconfig.ae302f40c1537xxx_rtss_he  Kconfig.defconfig.ae302f40c1537xxx_rtss_hp  Kconfig.defconfig.ae302f80c1557xx_rtss_he  Kconfig.defconfig.ae302f80c1557xx_rtss_hp  Kconfig.defconfig.ae302f80c1557xxx_rtss_he  Kconfig.defconfig.ae302f80c1557xxx_rtss_hp  Kconfig.defconfig.ae302f80f5582xx_rtss_he  Kconfig.defconfig.ae302f80f5582xx_rtss_hp  Kconfig.defconfig.ae302f80f5582xxx_rtss_he  Kconfig.defconfig.ae302f80f5582xxx_rtss_hp  Kconfig.soc
soc/alif/ensemble/e5/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.ae512f80f5582xx_rtss_he  Kconfig.defconfig.ae512f80f5582xx_rtss_hp  Kconfig.defconfig.ae512f80f5582xxx_rtss_he  Kconfig.defconfig.ae512f80f5582xxx_rtss_hp  Kconfig.defconfig.ae512f80f55d5xx_rtss_he  Kconfig.defconfig.ae512f80f55d5xx_rtss_hp  Kconfig.soc  soc.h
soc/alif/ensemble/e7/: CMakeLists.txt  soc.c  soc.h
submanifests/: alif-debug.yaml  executorch.yaml
(+620 files in other folders)
